# AIAgentLab

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
agent/evaluation/: __init__.py  __main__.py  evaluator.py  metrics.py
agent/generation/: __init__.py  base.py  bedrock_client.py  chain.py  llm_client.py  prompts.py
agent/ingestion/: __init__.py  base.py  bedrock_embedder.py  chunker.py  embedder.py  loader.py  pipeline.py
agent/memory/: __init__.py  chat_history.py
agent/orchestration/: __init__.py  agent.py  guardrails.py  schemas.py  tools.py
agent/retrieval/: __init__.py  base.py  opensearch_store.py  retriever.py  vector_store.py
agent/serverless/: __init__.py  ingestion_handler.py
agent/storage/: __init__.py  base.py  local_store.py  s3_store.py
api/: __init__.py  context.py  main.py  routes.py  schemas.py
config/: __init__.py  settings.py
data/eval/: insurance_qa.jsonl
docs/architecture/: aws_architecture.md  overview.md  rag_pipeline.md
docs/guides/: agent_overview.md  aws_setup.md  deployment.md  quickstart.md  supported_file_types.md
infra/: README.md
infra/terraform/: main.tf  opensearch.tf  outputs.tf  providers.tf  sagemaker.tf  variables.tf
tests/: conftest.py  stubs.py
tests/integration/: test_api.py  test_ingestion_pipeline.py  test_rag_pipeline.py
tests/unit/: test_agent.py  test_chain.py  test_chunker.py  test_embedder.py  test_evaluator.py  test_factories.py  test_guardrails.py  test_loader.py  test_memory.py  test_metrics.py  test_retriever.py  test_settings.py  test_storage.py  test_tools.py  test_vector_store.py
ui/: app.py  components.py
