[project]
name = "aiagentlab-rag"
version = "0.1.0"
description = "A modular RAG Q&A system for answering questions over uploaded documents using local embeddings, ChromaDB, Groq, FastAPI, and Streamlit."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Faruk Kahraman" }
]

dependencies = [
  "chromadb>=0.5.0",
  "sentence-transformers>=3.0.0",
  "groq>=0.9.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.0.0",
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "python-multipart>=0.0.9",
  "streamlit>=1.38.0",
  "pypdf>=5.0.0",
  "python-docx>=1.1.0",
  "python-dotenv>=1.0.0",
  "rich>=13.0.0",
  "boto3>=1.34.0",
  "opensearch-py>=2.6.0",
]

[project.optional-dependencies]
aws = [
  "boto3>=1.34.0",
  "opensearch-py>=2.6.0",
]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0",
  "ipykernel>=6.0.0",
  "httpx>=0.27.0",
  "moto[s3,dynamodb]>=5.0.0",
  "boto3-stubs[s3,dynamodb,bedrock-runtime]>=1.34.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agent*", "api*", "config*"]

[tool.ruff]
line-length = 88
extend-exclude = ["notebooks", "data"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"